force-app/main/default/objects/CCXR_Table__c/CCXR_Table__c.object-meta.xml
<CustomObject>
    <label>CCXR_Table</label>
    <nameField>
        <displayFormat>TABLE-{0000}</displayFormat>
        <label>CCXR_Table ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>