force-app/main/default/objects/CCXR_Table__c/fields/Assigned_Waiter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Waiter__c</fullName>
    <formula>CCXR_Restaurant_Employee__r.CCXR_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Waiter</label>
    <type>Text</type>
</CustomField>