force-app/main/default/objects/CCXR_Table__c/fields/CCXR_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Capacity__c</fullName>
    <label>CCXR_Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>