force-app/main/default/objects/CCXR_Table__c/fields/CCXR_Restaurant_Employee__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Restaurant_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CCXR_Restaurant Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CCXR_Restaurant_Employee__c.CCXR_Type_of_Employee__c</field>
            <operation>equals</operation>
            <value>Waiter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCXR_Restaurant_Employee__c</referenceTo>
    <relationshipLabel>CCXR_Tables</relationshipLabel>
    <relationshipName>CCXR_Tables</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>