force-app/main/default/objects/CCXR_Table__c/fields/CCXR_Table_Status__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Table_Status__c</fullName>
    <label>CCXR_Table Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>