force-app/main/default/objects/CCXR_Table__c/fields/restimeinmins__c.field-meta.xml
<CustomField>
    <fullName>restimeinmins__c</fullName>
    <formula>FLOOR((NOW() - Time_Of_Reservation__c ) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>restimeinmins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>