force-app/main/default/objects/CCXR_Table__c/fields/Table_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Table_Image_Link__c</fullName>
    <label>Table Image Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>