force-app/main/default/objects/CCXR_Table__c/fields/Time_Of_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Reservation__c</fullName>
    <label>Time Of Reservation</label>
    <type>DateTime</type>
</CustomField>